[tool.poetry]
name = "cf-submissions-downloader"
version = "0.1.0"
description = ""
authors = ["Lucas Castro <lcs147@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
selenium = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
