[tool.poetry]
name = "cf-submissions-downloader"
version = "0.1.0"
description = ""
authors = ["Lucas Castro <lcs147@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
mechanicalsoup = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
